<resources>
    <string name="app_name">BlindGyi TTS</string>
    <string name="input_hint">မြန်မာစာသားများကို ဤနေရာတွင် ရိုက်ထည့်ပါ...</string>
    <string name="btn_synthesize">အသံထွက်ရန် (Synthesize)</string>
    <string name="lang_not_supported">ဘာသာစကား အထောက်အပံ့ မရှိပါ။</string>
    <string name="enter_text_warning">ကျေးဇူးပြု၍ စာသားထည့်ပါ။</string>
    <string name="label_english_engine">အင်္ဂလိပ်စာအတွက် TTS Engine ရွေးချယ်ရန်</string>
    <string name="label_speech_rate">အပြောအမြန်နှုန်း (Speech Rate)</string>
    <string name="label_speech_pitch">အသံအနိမ့်အမြင့် (Pitch)</string>
    <string name="label_voice_profile">Voice Profile ရွေးချယ်ရန်</string>
</resources>
